Integrador German Rizo 1-12-22

--- a/obras.html
+++ b/obras.html
@@ -163,13 +163,13 @@
 
 
     <main>
-        <section id="obra1">
+        <section id="obras">
             <!-- texto -->
-            <div class="obra1-info">
+            <div class="obra-info">
                 <h2>NeuroCiborg </h2>
                 <h3> Teatro Galpon FACE </h3>
                 <p>
-                    <span>NeuroCiborg </span> explora el mundo del cerebro en 💃escena. Ejemplifica
+                    <span>NeuroCiborg </span> Explora el mundo del cerebro en 💃escena. Ejemplifica
                     los tipos de neuronas 🧫(motoneuronas, neuronas sensoriales, interneuronas, seudo-unipolar,
                     unipolar, bipolar, multipolares, piramidal). Las neuronas se pueden llegar a clasificar de muchas
                     formas,
@@ -186,20 +186,16 @@
                     <button class="categoryButton" href="#">🎥Video</button>
                 </div>
             </div>
-            <div class="obra1-img">
-                <div class="obra1-img-i">
+            <div class="obra-img">
+                <div class="obra-img-i">
                     <img src="./assets/img/4.jpg" alt="SeDav">
                 </div>
             </div>
-        </section>
-
-
-        <section id="obra2">
-            <div class="obra2-info">
+            <div class="obra-info">
                 <h2>Invierno Gestual </h2>
                 <h3> Teatro Espacio Utaki </h3>
                 <p>
-                    <span>Invierno Gestual </span> es la recuperación del gesto forzado de nuestro país Colombia,
+                    <span>Invierno Gestual </span> Es la recuperación del gesto forzado de nuestro país Colombia,
                     en donde si no ríes esta pasando un problema grave, una risa dolorida, la tortura de no decir nada
                     y sonreir, el dolor de callar para no morir, un gesto sin risa "es preocupante". En Invierno
                     todo muere para renacer, un momento largo de reflexión en Argentina para recuperar nuestro gesto
@@ -210,20 +206,16 @@
                     <button class="categoryButton" href="#">🎥Video</button>
                 </div>
             </div>
-            <div class="obra2-img">
-                <div class="obra2-img-i">
+            <div class="obra-img">
+                <div class="obra-img-i">
                     <img src="./assets/img/17.jpg" alt="SeDav">
                 </div>
             </div>
-        </section>
-
-
-        <section id="obra3">
-            <div class="obra3-info">
+            <div class="obra-info">
                 <h2>Kinesferas Audibles Multidimensionalidades Comunicativas </h2>
                 <h3> Teatro Margarita Xirgu UNTREF </h3>
                 <p>
-                    <span>“Kinesferas Audibles Multidimensionalidades Comunicativas” </span> del Colectivo
+                    <span>“Kinesferas Audibles Multidimensionalidades Comunicativas” </span> Del Colectivo
                     Fonocinesis,Teatro Xirgu el domingo 12 de Agosto 2018.
                     Una esfera sonorocinética nos rodea en nuestra cotidianidad, nos envuelve y nos conecta desde las
                     filigranas de los multiversos, nos atraviesa y nos convierte en cyborgs hiper-sensitivos…; cuerpos
@@ -252,20 +244,16 @@
                     <button class="categoryButton" href="#">🎥Video</button>
                 </div>
             </div>
-            <div class="obra1-img">
-                <div class="obra1-img-i">
+            <div class="obra-img">
+                <div class="obra-img-i">
                     <img src="./assets/img/12.jpg" alt="SeDav">
                 </div>
             </div>
-        </section>
-
-
-        <section id="obra4">
-            <div class="obra4-info">
+            <div class="obra-info">
                 <h2>Condor Pasa </h2>
                 <h3> Teatro Quinta-Paredes <br> Bogotá Colombia </h3>
                 <p>
-                    <span>Condor Pasa </span> es una composición musical para lienzo, dirección, flauta traversa, 2
+                    <span>Condor Pasa </span> Es una composición musical para lienzo, dirección, flauta traversa, 2
                     piano y voz (contralto) en donde
                     se exploran técnicas de la música contemporánea y el movimiento de los intérpretes, explorando la
                     investigació del término
@@ -277,8 +265,8 @@
                     <button class="categoryButton" href="#">🎥Video</button>
                 </div>
             </div>
-            <div class="obra4-img">
-                <div class="obra4-img-i">
+            <div class="obra-img">
+                <div class="obra-img-i">
                     <img src="./assets/img/15.jpg" alt="SeDav">
                 </div>
             </div>
