--- a/obras.html
+++ b/obras.html
@@ -167,9 +167,9 @@
             <!-- texto -->
             <div class="obra-info">
                 <h2>NeuroCiborg </h2>
-                <h3> Teatro Galpon FACE </h3>
+                <h3> Teatro Galpón FACE </h3>
                 <p>
-                    <span>NeuroCiborg </span> Explora el mundo del cerebro en 💃escena. Ejemplifica
+                    Explora el mundo del cerebro en 💃escena. Ejemplifica
                     los tipos de neuronas 🧫(motoneuronas, neuronas sensoriales, interneuronas, seudo-unipolar,
                     unipolar, bipolar, multipolares, piramidal). Las neuronas se pueden llegar a clasificar de muchas
                     formas,
@@ -195,7 +195,7 @@
                 <h2>Invierno Gestual </h2>
                 <h3> Teatro Espacio Utaki </h3>
                 <p>
-                    <span>Invierno Gestual </span> Es la recuperación del gesto forzado de nuestro país Colombia,
+                    Es la recuperación del gesto forzado de nuestro país Colombia,
                     en donde si no ríes esta pasando un problema grave, una risa dolorida, la tortura de no decir nada
                     y sonreir, el dolor de callar para no morir, un gesto sin risa "es preocupante". En Invierno
                     todo muere para renacer, un momento largo de reflexión en Argentina para recuperar nuestro gesto
@@ -215,7 +215,7 @@
                 <h2>Kinesferas Audibles Multidimensionalidades Comunicativas </h2>
                 <h3> Teatro Margarita Xirgu UNTREF </h3>
                 <p>
-                    <span>“Kinesferas Audibles Multidimensionalidades Comunicativas” </span> Del Colectivo
+                    Del Colectivo
                     Fonocinesis,Teatro Xirgu el domingo 12 de Agosto 2018.
                     Una esfera sonorocinética nos rodea en nuestra cotidianidad, nos envuelve y nos conecta desde las
                     filigranas de los multiversos, nos atraviesa y nos convierte en cyborgs hiper-sensitivos…; cuerpos
@@ -253,7 +253,7 @@
                 <h2>Condor Pasa </h2>
                 <h3> Teatro Quinta-Paredes <br> Bogotá Colombia </h3>
                 <p>
-                    <span>Condor Pasa </span> Es una composición musical para lienzo, dirección, flauta traversa, 2
+                    Es una composición musical para lienzo, dirección, flauta traversa, 2
                     piano y voz (contralto) en donde
                     se exploran técnicas de la música contemporánea y el movimiento de los intérpretes, explorando la
                     investigació del término
