--- a/registro.html
+++ b/registro.html
@@ -18,7 +18,7 @@
         <!-- Logo -->
         <div class="logo">
             <a href="./index.html" target="_blank">
-                <img src="./assets/logos/CiberArteSeDav11.png" alt="dueto_sedav">
+                <img src="./assets/logos/CiberArteSeDav11.png" alt="Germán David Rizo GeDav_CV_Full_Stack_Developer">
             </a>
         </div>
         <!-- Navbar -->
@@ -28,7 +28,6 @@
                 <img src="./assets/logos/menu2.png" class="menu-icon">
             </label>
             <input type="checkbox" id="menu-toggle">
-
 
             <ul class="navbar-list">
                 <li> <a href="./index.html"> CiberArte </a> </li>
@@ -160,128 +159,30 @@
                 <button class="btn-add">Comprar</button>
             </div>
             <div class="overlay"></div>
-
         </nav>
     </header>
 
 
     <main>
-        <!-- Aca viene la parte principal de la pagina -->
-        <!-- con sus respectivas secciones -->
-        <!-- hero que es contenedores (o texto dividido en 
-    titulo, texto, acci[on o bot[on) y la imagen (imagen y 
-    descripcion-superior e inferior- adntro puede tener
-    mas contenedores)-->
-        <section id="hero">
-            <!-- texto -->
-            <div class="hero-info">
-                <h1>CiberArte SeDav </h1>
-                <h2>
-                    Música Electroacústica y Arte Electrónico para la Escena
-                </h2>
-                <p>
-                    <span> Dúo SeDav </span> dueto de composición direccionado a la creación de obras
-                    musicales mixtas, acusmáticas, performáticas, escénicas, interactivas e instalativas contemporáneas
-                    vinculando
-                    las tecnologías actuales, software libre y código abierto como impulsores de trabajo co-creativo,
-                    práctico e investigativo de producción. Además ofrecemos distintos productos tecnológicos para la
-                    escena.
-                </p>
-                <div class="hero-info-boton">
-                    <button class="categoryButton" href="#">💻Be SeDav</button>
-                </div>
-            </div>
-
-            <!-- Imagen -->
-            <div class="hero-img-background-portada">
-                <div class="hero-img-portada">
-                    <img src="./assets/img/Portada.jpg" alt="SeDav">
-                </div>
-            </div>
-            <div>
-                <div class="header__socials">
-                    <a href="#" class="header__social" target="_blank" rel="GeDav">
-                        <img src="./assets/logos/soundcloud.png" alt="github" title="github"></a>
-                    <a href="https://www.facebook.com/profile.php?id=100067321148084" class="header__social1"
-                        target="_blank" rel="GeDav">
-                        <img src="./assets/logos/facebook.png" alt="facebook" title="linkedin"></a>
-                    <a href="https://https://www.instagram.com/dueto_sedav/" class="header__social2" target="_blank"
-                        rel="GeDav">
-                        <img src="./assets/logos/instagram.png" alt="instagram" title="instagram"></a>
-                </div>
-        </section>
-
-        <!-- Contenido -->
-        <section id="contenido">
-            <div class="contenido-info">
-                <h2>Descubre nuestros productos tecnológicos para la escena y la creación de obras tecnológicas
-                    escénicas artísticas, creativas y colaborativas.</h2>
-                <div class="contenido-text">
-                    <p>
-                        Tendras la oportunidad comprar nuestros productos tecnológicos-artísticos desde distintos
-                        tópicos, entre ellos: Tecnología, Música, Escena, Artes Visuales y Cine
-                        entre otros a tu gusto, y de este modo, acceder a beneficios exclusivos por ser
-                        parte de nuesta red SeDav.
-                    </p>
-                    <a href="./contacto.html" target="_blank"> Contáctanos</a>
-                </div>
-            </div>
-        </section>
-
-
-        <!-- Cards Beneficios -->
-        <section id="info">
-            <h2>BENEFICIOS DE SER <br> PARTE DE LA RED DEL <br>
-                DUETO SEDAV</h2>
-            <div class="info-cards-container">
-                <div class="info-card">
-                    <img src="./assets/logos/choose.svg" alt="Icono NFTs" />
-                    <h3>Elije tu producto</h3>
-                    <p>
-                        Una vez que haya seleccionado tu producto que mejor se adapte a tus interéses
-                        podras dar click en comprar y añadirlos al carrito.
-                    </p>
-                </div>
-                <div class="info-card">
-                    <img src="./assets/logos/pagina.svg" alt="Icono NFTs" />
-                    <h3>Red SeDav</h3>
-                    <p>
-                        A partir de ahora, formás parte de la Red SeDav y vas
-                        a poder acceder a diferentes productos exclusivos para ti
-                        como: Productos tecnológicos adaptables para la escena, composición y arreglos de sonodirdades
-                        musicales,
-                        trajes wearables adaptables para la escena y el mantenimiento de tus productos, entre otros más.
-                        <a href="./productos.html" target="_blank"> Descubrelos </a>
-                    </p>
-
-                </div>
-                <div class="info-card">
-                    <img src="./assets/logos/red.svg" alt="Red GeDav" />
-                    <h3>Configura tu Wallet</h3>
-                    <p>
-                        Después de elegír y realizar los pasos anteriores y añadido los productos, configurado la
-                        billetera
-                        virtual de tu elección y envía tu pago a el alias: user.estriga.LEMON
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <section id="portafolio">
-            <h2>PRODUCTOS</h2>
-            <div class="categories">
-                <button class="category">💻Tecnología</button>
-                <button class="category">🎹Música</button>
-                <button class="category">💃Escena</button>
-                <button class="category">🎨Visuales</button>
-                <button class="category">🎬Cine</button>
-            </div>
-        </section>
+        <form  class="loging_container">            
+            <h1>Registrate</h1> 
+            <input type="text" placeholder="Ingrese su nombre" required>
+            <input type="email" placeholder="Ingrese su mail" required>
+            <input type="password" placeholder="Ingrese su contraseña" required>
+            <input type="submit" value="Enviar">
+                
+               <p> 
+                "¿Ya tienes una cuenta?" 
+                <a href="iniciar_sesion.html">Iniciar sesion</a>
+            </p>
+                       
+    </from>
     </main>
 
 
 
     <footer>
+
         <p>Hecho con ❤️ <br><span> -Be GeDav-</span></p>
     </footer>
 </body>
