Entrega_Integrador_Web_Rizo_Nucba_2717

--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
         <section id="portafolio">
             <h2>PRODUCTOS</h2>
             <div class="categories">
+                <button class="category">✨ Todos</button>
                 <button class="category">💻Tecnología</button>
                 <button class="category">🎹Música</button>
                 <button class="category">💃Escena</button>
